--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -320,9 +320,16 @@ jobs:
       - name: Count issues
         id: count-issues
         run: |
-          GL_COUNT=$(jq '.vulnerabilities | length' reports/gitleaks/gitleaks-report.json || echo 0)
-          DC_COUNT=$(grep -c '<Vulnerability>' reports/dependency-check/*.html || echo 0)
-          CKV_COUNT=$(jq '.results | length' reports/checkov/checkov-report.json || echo 0)
+        
+          # Gitleaks (JSON array)
+          GL_COUNT=$(jq 'length' reports/gitleaks/gitleaks-report.json 2>/dev/null || echo 0)
+      
+          # Dependency-Check (HTML contains "vulnerability")
+          DC_COUNT=$(grep -i -c 'vulnerability' reports/dependency-check/*.html 2>/dev/null || echo 0)
+      
+          # Checkov
+          CKV_COUNT=$(jq '.results.failed_checks | length' reports/checkov/checkov-report.json 2>/dev/null || echo 0)
+      
           echo "gl_count=$GL_COUNT" >> $GITHUB_ENV
           echo "dc_count=$DC_COUNT" >> $GITHUB_ENV
           echo "ckv_count=$CKV_COUNT" >> $GITHUB_ENV
